--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <h2>Richard Manuel Gonzales Hancco</h2>
     <h3>Soy estudiante del programa de estudio de APSTI</h3>
     <H4>Estoy en el II se,estre</H4>
-<p>Bien</p>
+<p>Bienvenidos a la Presentación Básica para tu página.
+Hoy conocerán lo esencial sobre quiénes somos, qué ofrecemos y cómo contactarnos.</p>
 
     
  </body>
