--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 
 </head>  
   <body>
+    <title>Mi primera pagina web</title>
     <h1>mi nimbre es</h1>
     <h2>Richard Manuel Gonzales Hancco</h2>
     <h3>Soy estudiante del programa de estudio de APSTI</h3>
     <H4>Estoy en el II se,estre</H4>
 <p>Bienvenidos a la Presentación Básica para tu página.
 Hoy conocerán lo esencial sobre quiénes somos, qué ofrecemos y cómo contactarnos.</p>
+  <img src="imagen.jpg" alt="Descripción">
 
     
  </body>
