--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <h1>mi nimbre es</h1>
     <h2>Richard Manuel Gonzales Hancco</h2>
     <h3>Soy estudiante del programa de estudio de APSTI</h3>
-    <H4>Estoy en el II se,estre</H4>
+    <H4>Estoy en el II semestre</H4>
 <p>Bienvenidos a la Presentación Básica para tu página.
 Hoy conocerán lo esencial sobre quiénes somos, qué ofrecemos y cómo contactarnos.</p>
-  <img src="imagen.jpg" alt="Descripción">
+  <img src="imagen.jpg" alt="">
 
     
  </body>
