--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <H4>Estoy en el II semestre</H4>
 <p>Bienvenidos a la Presentación Básica para tu página.
 Hoy conocerán lo esencial sobre quiénes somos, qué ofrecemos y cómo contactarnos.</p>
-  <img src="imagen.jpg" alt="">
+  <button>GRACIAS</button>
 
     
  </body>
