--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>  
   <body>
     <title>Mi primera pagina web</title>
-    <h1>mi nimbre es</h1>
+    <h1>mi nombre es</h1>
     <h2>Richard Manuel Gonzales Hancco</h2>
     <h3>Soy estudiante del programa de estudio de APSTI</h3>
     <H4>Estoy en el II semestre</H4>
